# RestaurantMenagement

./: CMakeLists.txt  README.md  appetizer.cpp  appetizer.h  customer.cpp  customer.h  dessert.cpp  dessert.h  dish.cpp  dish.h  entree.cpp  entree.h  main.cpp  mainRestaurant.cpp  menu.cpp  menu.h  order.cpp  order.h  restaurant.cpp  restaurant.h
test/: test_dish.cpp  test_main.cpp
